RESOLVED FIXED39745
qt_pixmapruntime.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39745
Summary qt_pixmapruntime.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 09:32:07 PDT
WebCore/bridge/qt/qt_pixmapruntime.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (1.06 KB, patch)
2010-05-26 09:54 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 09:54:14 PDT
Created attachment 57107 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:39:19 PDT
QtTriaged
WebKit Commit Bot
Comment 3 2010-05-27 07:36:33 PDT
Comment on attachment 57107 [details] Patch that fixes the coding style issues Clearing flags on attachment: 57107 Committed r60300: <http://trac.webkit.org/changeset/60300>
WebKit Commit Bot
Comment 4 2010-05-27 07:36:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.