2010-05-27  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        qt_pixmapruntime.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39745

        Fix webkit coding style issues in qt_pixmapruntime.cpp

        * bridge/qt/qt_pixmapruntime.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60300 bbb929c8-8fbe-4397-9dbb-9b2b20218538