third_party/WebKit/WebCore/bridge/qt/qt_pixmapruntime.cpp
@@ -32,9 +32,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QImage>
 #include <QPixmap>
 #include <QVariant>
+#include <runtime_method.h>
 #include <runtime_object.h>
 #include <runtime_root.h>
-#include <runtime_method.h>
 
 using namespace WebCore;
 namespace JSC {
